# SchoolTGBOTregistration

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  create_migration.sh  docker-compose.yml  init.sql  pyproject.toml
src/: bot_instance.py  logs.json  main.py
src/app/handlers/: handlers.py  registration.py  states.py  utils.py
src/app/keyboards/: keyboards.py  keyboards.yml  logs.json
src/app/logger/: logger.py
src/app/repository/: CRUD.py  database.py  models.py
src/configs/: config.py
src/migrations/: env.py
src/migrations/versions/: 503b5d755086_init_migration_first112.py  5f43778fd8d9_init_migration_first112.py  b6dda2ac95ce_init_migration_first.py  ebf4a8040363_init_migration.py
